Position it correctly on mobile

--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@ font-family: 'Barlow Condensed', sans-serif;
     grid-template-areas: 'first'
                         'second';
                         gap: 40px;
-                        grid-auto-rows: 300px;
+                        grid-auto-rows: 425px;
+                        overflow-x: hidden;
 }
 
 .section1{
 grid-area: first;
+
 
 }
 
@@ -25,12 +27,13 @@ grid-area: first;
   grid-template-columns: 1fr 1fr;
   height: 100%;
   position: relative;
+
 }
 
 .half-grey{
     background-color: #EDF2F6;
-    border-bottom-left-radius: 1rem;
-    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 4rem;
+  width: 100%;
     display: flex;
     justify-content: flex-end;
    
@@ -40,14 +43,22 @@ grid-area: first;
 
 .ham{
     height: 1.2rem;
-    margin-top: 1.2rem ;
-    margin-right: 1.5rem;
+    margin-top: 1.5rem ;
+    margin-right: 2rem;
 }
 
 .logo{
     height: 1.5rem;
-    margin-top: 1.1rem ;
-    margin-left: 1.5rem;
+    margin-top: 1.5rem ;
+    margin-left: 2rem;
+}
+
+.comp{
+ max-width: 30rem;
+   height: auto;
+    position: absolute;
+    top: 8rem;
+    left: 1rem;
 }
 
 .section2{
